# LearnOpengGL_in_C

./: .gitignore  .gitmodules  Makefile  README.md  meson.build  shell.nix
include/: app.h  chunk.h  mesh.h  shader.h  texture.h  uniform.h  vertex.h  window.h
include/glad/: gl.h
include/graphics/: geometry.h  vertex.h  vertex_desc.h
shaders/: frag.glsl  vertex.glsl
src/: app.c  chunk.c  main.c  mesh.c  shader.c  texture.c  vertex.c  window.c
src/graphics/: geometry.c  vertex_entry.c
